# esp32-klimper

./: CMakeLists.txt  README.md  TODO.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  audiohw.c  audiohw.h  main.c  midi.c  midi.h  sequencer.c  sequencer.h  synth.c  synth.h  ui.c  ui.h
main/driver/: audiohw.c  audiohw.h  midiio.c
main/dsp/: adsr.c  adsr.h  oscil.c  oscil.h  pan.c  pan.h  utils.c  utils.h  wavetable.c  wavetable.h
main/ui/: common.h  display.c  display.h  ui.c  ui.h
main/ui/display/: 1602p.c  console.c
